# pycounts_gqy

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_gqy/: __init__.py  pycounts_gqy.py
tests/: einstein.txt  test_pycounts_gqy.py
