[tool.poetry]
name = "pycounts_gqy"
version = "1.0.0"
description = "Calculate word counts in a text file."
authors = ["Chris Gao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.6"
matplotlib = ">=3.8.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
